Add FastAPI and Celery-based download and processing service
- Implemented a FastAPI application for handling XBRL file downloads and processing.
- Created a DownloadService class for managing ZIP file downloads, extraction, and conversion to Parquet format.
- Added asynchronous processing capabilities using Celery for handling XBRL file processing.
- Integrated Prometheus for monitoring metrics related to downloads and processing.
- Updated requirements.txt to include necessary dependencies for FastAPI, Celery, and other libraries.
- Introduced a worker script for processing XBRL files with error handling and caching mechanisms.

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,11 @@ pinecone>=6.0.0
 # Otras dependencias
 python-xbrl
 psutil
-pymongo
 tqdm
+
+# MongoDB y Motor
+pymongo==4.3.3
+motor==3.1.1
 
 # Nota: zipfile36 fue reemplazado por zipfile en la biblioteca estándar de Python
 
@@ -27,3 +30,16 @@ pydantic>=2.0.0
 pydantic-settings>=2.0.0
 tiktoken>=0.3.0
 openai>=1.0.0
+
+# Stack Async
+fastapi==0.109.2
+celery==5.3.6
+redis==5.0.1
+aiohttp==3.9.3
+dask==2024.1.1
+pinecone-client==3.0.2
+prometheus-client==0.19.0
+uvicorn==0.27.1
+python-multipart==0.0.9
+aiofiles==23.2.1
+httpx==0.26.0
