Implement asynchronous processing and MongoDB optimizations in APIProcessor
- Enhanced APIProcessor to support asynchronous file processing using asyncio and aiohttp.
- Added methods for connecting to MongoDB asynchronously and creating optimized indexes for better performance.
- Introduced a caching mechanism for results to reduce redundant database queries.
- Updated the handling of company information retrieval to ensure data integrity and proper error logging.
- Added new scripts for S3 diagnostics, uploading Parquet files, and testing MongoDB connections.
- Updated requirements.txt to reflect compatible versions of pymongo and motor.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,9 @@ python-xbrl
 psutil
 tqdm
 
-# MongoDB y Motor
-pymongo==4.3.3
-motor==3.1.1
+# MongoDB y Motor - Versiones compatibles
+pymongo==4.5.0
+motor==3.3.1
 
 # Nota: zipfile36 fue reemplazado por zipfile en la biblioteca estándar de Python
 
