Enhance APIProcessor and related services for improved data handling and cache management
- Updated APIProcessor to normalize API responses and ensure consistent data structure for MongoDB storage.
- Added unique index creation for MongoDB collections to prevent duplicate entries.
- Enhanced file processing logic to include zip_name in company information and ensure proper handling of account dates.
- Introduced new endpoints in FastAPI for clearing cache, improving cache management capabilities.
- Refactored XBRLProcessor to optimize Redis cache handling and improve error logging during file processing.
- Updated requirements.txt to reflect changes in dependencies and ensure compatibility.

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,9 @@ uvicorn==0.27.1
 python-multipart==0.0.9
 aiofiles==23.2.1
 httpx==0.26.0
+
+
+[DEBUG] API raw response for 00039177: 
+{'company_name': 'THE WHITE RIBBON ASSOCIATION INCORPORATED', 'company_number': '00039177', 'accounts_date': [{'zip_name': 'N/R', 'date': [{'zip_name': 'N/R', 'date': '31/12/2024', 'company_legal_type': 'Private company, limited by guarantee', 'currency': 'GBP', 'total_director_remuneration': 'N/R', 'highest_paid_director': 'N/R', 'inserted_at': '2025-03-11T00:00:00.000Z'}], 'company_legal_type': 'N/R', 'currency': 'N/R', 'total_director_remuneration': 'N/R', 'highest_paid_director': 'N/R', 'inserted_at': '2025-05-18T04:14:42.688Z'}], 'requestId': '93365151-7438-467a-b771-71a275027350'}
+2025-05-18 00:14:42,690 - api_processor - INFO - Successfully fetched info for company 00039177
+[DEBUG] company_info response: {'company_name': 'THE WHITE RIBBON ASSOCIATION INCORPORATED', 'company_number': '00039177', 'accounts_date': [{'zip_name': 'N/R', 'date': '31/12/2024', 'company_legal_type': 'Private company, limited by guarantee', 'currency': 'GBP', 'total_director_remuneration': 'N/R', 'highest_paid_director': 'N/R', 'inserted_at': '2025-03-11T00:00:00.000Z'}]}
